--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "1.0.0",
   "description": "My Remotion video",
   "repository": {},
+  "type": "module",
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
     "@remotion/cli": "4.0.390",
+    "@remotion/tailwind-v4": "4.0.390",
+    "gtts": "^0.2.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "remotion": "4.0.390",
-    "@remotion/tailwind-v4": "4.0.390",
     "tailwindcss": "4.0.0"
   },
   "devDependencies": {
