--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "@remotion/cli": "4.0.390",
     "@remotion/google-fonts": "^4.0.390",
+    "@remotion/media-utils": "^4.0.390",
     "@remotion/tailwind-v4": "4.0.390",
+    "fs": "^0.0.1-security",
     "gtts": "^0.2.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -18,6 +20,7 @@
   },
   "devDependencies": {
     "@remotion/eslint-config-flat": "4.0.390",
+    "@types/node": "^25.0.2",
     "@types/react": "19.0.0",
     "@types/web": "0.0.166",
     "eslint": "9.19.0",
